@@ -5,6 +5,10 @@ $Id$                       -*-text-*-
 
 	Show structure of EDNS options using Perl-like syntax.
 
+Fix rt.cpan.org #127557
+
+	Net::DNS::Resolver::Base should use 3 args open
+
 Fix rt.cpan.org #127182
 
 	Incorrect logic can cause DNS search to emit fruitless queries.
